crates/apollo-compiler/test_data/diagnostics/0063_extension_orphan.txt
Error: cannot find type `A` in this document
   ╭─[0063_extension_orphan.graphql:5:1]
   │
 5 │ extend scalar A @deprecated(reason: "Use B instead")
   │               ┬  
   │               ╰── `A` type definition does not exist
───╯
Error: cannot find type `B` in this document
   ╭─[0063_extension_orphan.graphql:6:1]
   │
 6 │ extend type B { field: Int! }
   │             ┬  
   │             ╰── `B` type definition does not exist
───╯
Error: cannot find type `C` in this document
    ╭─[0063_extension_orphan.graphql:10:1]
    │
 10 │ extend union C = String
    │              ┬  
    │              ╰── `C` type definition does not exist
────╯
Error: cannot find type `D` in this document
    ╭─[0063_extension_orphan.graphql:11:1]
    │
 11 │ extend interface D {
    │                  ┬  
    │                  ╰── `D` type definition does not exist
────╯
Error: cannot find type `E` in this document
    ╭─[0063_extension_orphan.graphql:14:1]
    │
 14 │ extend input E {
    │              ┬  
    │              ╰── `E` type definition does not exist
────╯
Error: cannot find type `F` in this document
    ╭─[0063_extension_orphan.graphql:17:1]
    │
 17 │ extend enum F {
    │             ┬  
    │             ╰── `F` type definition does not exist
────╯

